--- a/package.json
+++ b/package.json
@@ -10,31 +10,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "expo": "~54.0.10",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/bottom-tabs": "^7.4.0",
+
     "@react-navigation/native": "^7.1.0",
     "@react-navigation/native-stack": "^7.3.0",
-    "expo": "~54.0.10",
-    "expo-font": "~14.0.8",
-    "expo-haptics": "~13.0.1",
-    "expo-localization": "~17.0.7",
-    "expo-location": "~19.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-sqlite": "~16.0.8",
-    "expo-status-bar": "~3.0.8",
-    "i18next": "^25.5.2",
-    "react": "19.1.0",
-    "react-i18next": "^15.7.3",
-    "react-native": "0.81.4",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+
+    "react-native-screens": "~4.16.0",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+
+    "expo-status-bar": "~3.0.8",
+    "expo-localization": "~17.0.7",
+    "expo-location": "~19.0.7",
+    "expo-sqlite": "~16.0.8",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~15.0.7",
+
+    "i18next": "^25.5.2",
+    "react-i18next": "^15.7.3"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
     "babel-preset-expo": "~54.0.0",
+    "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   }
 }
